--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         </div>
 
         <div style="font-size: 30px; text-align: center;">
-            <a href="https://www.facebook.com/profile.php?id=100072222099319&mibextid=ZbWKwL"><i class="fa-brands fa-facebook" style="padding-right: 19px; color: blue;"></i></a>
-            <a href="https://youtube.com/@MrAhmedSalah-fh4xv?si=zJIheaaEQbGNSICb"><i class="fa-brands fa-youtube" style="padding-right: 19px; color: rgb(255, 0, 0);"></i></a>
-            <a href="https://wa.me/+201116599580/?text=urlencodedtext"><i class="fa-brands fa-whatsapp" style="color: rgb(0, 255, 0);"></i></a>
+            <a href="https://www.facebook.com/share/uzLVeb8ER3idMiJS/?mibextid=A7sQZp"><i class="fa-brands fa-facebook" style="padding-right: 19px; color: blue;"></i></a>
+            <a href="https://youtube.com/@alaaaliofficial1?si=lFAmLBI06TlqG7-x"><i class="fa-brands fa-youtube" style="padding-right: 19px; color: rgb(255, 0, 0);"></i></a>
+            <a href="https://wa.me/+201156110006/?text=urlencodedtext"><i class="fa-brands fa-whatsapp" style="color: rgb(0, 255, 0);"></i></a>
             
         </div>
         <img src="img/cut1.png" alt="" style="width: 100%; ">   
